@@ -30,7 +30,7 @@ setup(name='plone.openid',
 #      ],
       install_requires=[
         'setuptools',
-        'python-openid >=2.0.0,<2.0.999',
+        'python-openid >=2.2.1,',
       ],
       entry_points="""
       # -*- Entry points: -*-
